# ML-Playbook

./: Manifest.toml  Project.toml  README.md  pyproject.toml
notebook/: a1.ipynb  basic_nn_pytorch.ipynb  computation_graph_and_xor_example.ipynb  intro_to_flux.ipynb  intro_to_tensors.ipynb  mlp_mnist_example.ipynb
src/basics/: adaline.py  gradient_descent.py  mlp.py  perceptron.py  stochastic_gradient_descent.py
