[tool.poetry]
name = "ml-playbook"
version = "0.1.0"
description = ""
authors = ["hy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.0"
numpy = "^2.0.1"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
ipykernel = "^6.29.5"
xgboost = "^2.1.1"
lightgbm = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
