[tool.poetry]
name = "ml-playbook"
version = "0.1.0"
description = ""
authors = ["hy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
ipykernel = "^6.29.5"
xgboost = "^2.1.1"
lightgbm = "^4.5.0"
colorama = "^0.4.6"
tensorflow = "^2.17.0"
jax = "^0.4.31"
ipywidgets = "^8.1.3"
tqdm = "^4.66.5"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
